# sarif-to-annotations

./: .gitignore  Dockerfile  LICENSE  README.md  action.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: check-licenses.yaml  publish-ghcr.yaml  publish-pypi.yaml  test-action.yaml  test-build.yaml  test.yaml
src/sarif_to_annotations/: __init__.py  cli.py  converter.py  models.py
test/: conftest.py  test_cli.py  test_converter.py
test/assets/: semgrep-failed-execution.expected-gh-output.txt  semgrep-failed-execution.json  semgrep-no-results.json  semgrep-results-found.expected-gh-output.txt  semgrep-results-found.json
